Add an ending slash to base URLs when they don't have one, in order to better match user expectations. Submitted by: Adrian Cumiskey (fop-dev AT cumiskey DOT com)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@512185 13f79535-47bb-0310-9956-ffa450edef68